--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -92,6 +92,17 @@ header {
   height: 93vh;
   overflow-y: auto;
   overflow-x: hidden; }
+  .hptl-phase1-sideMenuBar .sideMenu-header .menuBarLoader {
+    position: absolute;
+    height: 100%;
+    background: #e9e9e9;
+    width: 100%;
+    z-index: 9;
+    text-align: center;
+    padding-top: 100%; }
+    .hptl-phase1-sideMenuBar .sideMenu-header .menuBarLoader i {
+      color: #00babe;
+      font-size: 3rem; }
 
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding: 5px 0;
