--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
@@ -1,11 +1,14 @@
 .hptl-phase1-add-employee-form {
   padding: 0 15px; }
   .hptl-phase1-add-employee-form h6 {
-    margin: 10px 0 0;
-    padding-bottom: 5px;
+    margin: 10px 0;
+    padding-bottom: 2px;
     border-bottom: 1px solid #d3d3d3; }
     .hptl-phase1-add-employee-form h6 span {
-      border-bottom: 3px solid #00cbd0; }
+      border-bottom: 2px solid #8c8c8c;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      line-height: 0; }
   .hptl-phase1-add-employee-form .primary-details {
     border-right: 1px dashed #d3d3d3;
     padding-top: 8px; }
