--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1263,6 +1263,8 @@ th {
   height: 480px;
   margin: auto;
   box-shadow: 0 30px 100px rgba(0, 0, 0, 0.5); }
+  .image-area-cntr video {
+    background: #000; }
   .image-area-cntr .videoActions {
     position: absolute;
     z-index: 9;
