--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/DeptUserDetails/DeptUserDetails.css
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/DeptUserDetails/DeptUserDetails.css
@@ -1,18 +1,28 @@
-.hptl-phase1-dept-user-form {
-  border-top: 1px solid #ccc;
-  margin-top: 10px; }
-  .hptl-phase1-dept-user-form .form-details {
-    padding: 5px;
-    padding-bottom: 5px; }
-  .hptl-phase1-dept-user-form mark {
-    background: none;
-    color: red; }
-  .hptl-phase1-dept-user-form label {
-    font-weight: 400;
-    font-size: 11px; }
-  .hptl-phase1-dept-user-form .form-group {
-    margin-bottom: 0;
-    margin-top: 4px;
-    padding: 0;
-    padding-top: 20px;
-    cursor: pointer; }
+.hptl-phase1-dept-user-form h5 {
+  margin: 10px 0;
+  padding-bottom: 2px;
+  border-bottom: 1px solid #d3d3d3; }
+  .hptl-phase1-dept-user-form h5 span {
+    border-bottom: 2px solid #8c8c8c;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    line-height: 0; }
+
+.hptl-phase1-dept-user-form .form-details {
+  padding: 5px;
+  padding-bottom: 5px; }
+
+.hptl-phase1-dept-user-form mark {
+  background: none;
+  color: red; }
+
+.hptl-phase1-dept-user-form label {
+  font-weight: 400;
+  font-size: 11px; }
+
+.hptl-phase1-dept-user-form .form-group {
+  margin-bottom: 0;
+  margin-top: 4px;
+  padding: 0;
+  padding-top: 20px;
+  cursor: pointer; }
