--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/DeptUserDetails/DeptUserDetails.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/DeptUserDetails/DeptUserDetails.scss
@@ -1,6 +1,15 @@
 .hptl-phase1-dept-user-form {
-  border-top: 1px solid #ccc;
-  margin-top: 10px;
+  h5 {
+    margin: 10px 0;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #d3d3d3;
+    span {
+      border-bottom: 2px solid #8c8c8c;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      line-height: 0;
+    }
+  }
   .form-details {
     padding: 5px;
     padding-bottom: 5px;
