--- a/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
+++ b/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
@@ -1,32 +1,32 @@
-.patientInfo-Top {
+.RadResultEntry .patientInfo-Top {
   background: white;
   height: 70px;
   padding: 5px 0 0;
   width: 100%;
   position: relative;
   z-index: 1; }
-  .patientInfo-Top div {
+  .RadResultEntry .patientInfo-Top div {
     float: left;
     color: #858585; }
-  .patientInfo-Top .backBtn {
+  .RadResultEntry .patientInfo-Top .backBtn {
     border-right: 1px solid #e1e1e1;
     padding-right: 10px; }
-    .patientInfo-Top .backBtn button {
+    .RadResultEntry .patientInfo-Top .backBtn button {
       height: 60px;
       border: 1px solid #e1e1e1;
       font-size: 0.7rem; }
-    .patientInfo-Top .backBtn i {
+    .RadResultEntry .patientInfo-Top .backBtn i {
       display: block;
       margin-bottom: 5px; }
-  .patientInfo-Top .patientImg {
+  .RadResultEntry .patientInfo-Top .patientImg {
     margin: 1px 10px;
     border-radius: 4px;
     border: 1px solid #e1e1e1; }
-    .patientInfo-Top .patientImg img {
+    .RadResultEntry .patientInfo-Top .patientImg img {
       height: 55px;
       border-radius: 4px;
       overflow: hidden; }
-  .patientInfo-Top .patientName {
+  .RadResultEntry .patientInfo-Top .patientName {
     max-width: 230px;
     margin-top: 2px;
     border-left: 1px solid #e1e1e1;
@@ -34,64 +34,64 @@
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
-    .patientInfo-Top .patientName h6 {
+    .RadResultEntry .patientInfo-Top .patientName h6 {
       font-size: 1rem;
       margin-bottom: 2px;
       color: #000;
       line-height: 1.2rem; }
-    .patientInfo-Top .patientName p {
+    .RadResultEntry .patientInfo-Top .patientName p {
       font-size: 0.8rem;
       margin: 0;
       padding: 0; }
-  .patientInfo-Top .patientDemographic {
+  .RadResultEntry .patientInfo-Top .patientDemographic {
     font-size: 0.8rem;
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
-    .patientInfo-Top .patientDemographic span {
+    .RadResultEntry .patientInfo-Top .patientDemographic span {
       display: block; }
-      .patientInfo-Top .patientDemographic span b {
+      .RadResultEntry .patientInfo-Top .patientDemographic span b {
         color: #34b8bc; }
-  .patientInfo-Top .patientHospitalDetail {
+  .RadResultEntry .patientInfo-Top .patientHospitalDetail {
     font-size: 0.8rem;
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
-    .patientInfo-Top .patientHospitalDetail span {
+    .RadResultEntry .patientInfo-Top .patientHospitalDetail span {
       display: block; }
-      .patientInfo-Top .patientHospitalDetail span b {
+      .RadResultEntry .patientInfo-Top .patientHospitalDetail span b {
         color: #34b8bc; }
-  .patientInfo-Top .patientVital {
+  .RadResultEntry .patientInfo-Top .patientVital {
     font-size: 0.8rem;
     width: 210px;
     line-height: 1.3rem;
     padding-left: 10px;
     padding-right: 10px;
     min-height: 57px; }
-    .patientInfo-Top .patientVital span {
+    .RadResultEntry .patientInfo-Top .patientVital span {
       display: inline-block;
       margin-right: 8px; }
-      .patientInfo-Top .patientVital span b {
+      .RadResultEntry .patientInfo-Top .patientVital span b {
         color: #34b8bc; }
-  .patientInfo-Top .moreAction {
+  .RadResultEntry .patientInfo-Top .moreAction {
     float: right;
     border-right: 1px solid #e1e1e1;
     padding-right: 10px; }
-    .patientInfo-Top .moreAction button {
+    .RadResultEntry .patientInfo-Top .moreAction button {
       height: 60px;
       border: 1px solid #e1e1e1;
       font-size: 0.7rem;
       margin-left: 0; }
-    .patientInfo-Top .moreAction i {
+    .RadResultEntry .patientInfo-Top .moreAction i {
       display: block;
       margin-bottom: 5px; }
 
-.form-row-gap {
+.RadResultEntry .form-row-gap {
   padding-top: 5px; }
 
-.editor {
+.RadResultEntry .editor {
   padding-top: 10px; }
