--- a/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.scss
+++ b/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.scss
@@ -1,15 +1,26 @@
-#claimGrid_cntr {
-  .ReactTable {
-    height: 20vh !important;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    .rt-table {
-      overflow-y: hidden;
+.ClaimValidationPopup {
+  margin-bottom: 15px;
+  .image-drop-area {
+    height: 128px !important;
+  }
+  #claimGrid_cntr {
+    .ReactTable {
+      height: 20vh !important;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      .rt-table {
+        overflow-y: hidden;
+      }
     }
   }
-}
-#invoiceDetailGrid_Cntr {
-  .ReactTable {
-    height: 43vh !important;
+  #invoiceDetailGrid_Cntr {
+    .ReactTable {
+      height: 43vh !important;
+    }
+  }
+  #icd_bill_cntr {
+    .ReactTable {
+      height: 34.5vh !important;
+    }
   }
 }
