--- a/client/src/Components/InsuranceClaims/RCMWorkbench/RCMWorkbench.css
+++ b/client/src/Components/InsuranceClaims/RCMWorkbench/RCMWorkbench.css
@@ -1,5 +1,6 @@
 #rcm_desktop_cntr .ReactTable {
-  max-width: 96vw !important; }
+  max-width: 96vw !important;
+  max-height: 45vh !important; }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   #rcm_desktop_cntr .ReactTable {
