--- a/client/src/Components/InsuranceClaims/RCMWorkbench/RCMWorkbench.scss
+++ b/client/src/Components/InsuranceClaims/RCMWorkbench/RCMWorkbench.scss
@@ -1,6 +1,7 @@
 #rcm_desktop_cntr {
   .ReactTable {
     max-width: 96vw !important;
+    max-height: 45vh !important;
   }
   @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
     .ReactTable {
