Added Attendance Regu... Screen for HR

--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -2,8 +2,8 @@
   .rt-thead {
     .rt-th {
       font-size: 0.8rem !important;
-      color: #fff !important;
-      background: #8c8c8c !important;
+      color: #000 !important;
+      background: #f3ffff !important;
       .style_Label {
         font-weight: bold !important;
         white-space: pre-line !important;
