--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -1,7 +1,7 @@
 .ReactTable .rt-thead .rt-th {
   font-size: 0.8rem !important;
-  color: #fff !important;
-  background: #8c8c8c !important; }
+  color: #000 !important;
+  background: #f3ffff !important; }
   .ReactTable .rt-thead .rt-th .style_Label {
     font-weight: bold !important;
     white-space: pre-line !important;
