Remove Material Icons and Material Paper

--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
@@ -13,6 +13,7 @@
       float: right;
       margin-left: 10px; }
   .hptl-phase1-network-plan-form .Paper {
+    background: #fff;
     border: 1px solid #d3d3d3;
     padding: 10px; }
   .hptl-phase1-network-plan-form .label-pad {
