--- a/client/src/Components/InvestigationSetup/LabInvestigation/LabInvestigation.scss
+++ b/client/src/Components/InvestigationSetup/LabInvestigation/LabInvestigation.scss
@@ -18,7 +18,7 @@
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
   }
-  .Paper {
+  .Paper {background:#fff; 
     padding: 10px;
     border: 1px solid #d3d3d3;
     margin-top: 10px;
