--- a/client/src/Components/Pharmacy/SalesReturn/ItemListsReturn/ItemListsReturn.css
+++ b/client/src/Components/Pharmacy/SalesReturn/ItemListsReturn/ItemListsReturn.css
@@ -16,6 +16,7 @@
     margin-bottom: -15px;
     margin-top: -10px; }
   .hptl-phase1-item-list-billing-form .Paper {
+    background: #fff;
     min-height: 35vh;
     border: 1px solid #d3d3d3; }
   .hptl-phase1-item-list-billing-form th,
