--- a/client/src/Components/InvestigationSetup/RadInvestigation/RadInvestigation.css
+++ b/client/src/Components/InvestigationSetup/RadInvestigation/RadInvestigation.css
@@ -14,6 +14,7 @@
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px; }
   .hptl-phase1-add-rad-investigation-form .Paper {
+    background: #fff;
     padding: 10px;
     border: 1px solid #d3d3d3;
     margin-top: 10px; }
