--- a/client/src/Components/InvestigationSetup/RadTemplate/RadTemplate.css
+++ b/client/src/Components/InvestigationSetup/RadTemplate/RadTemplate.css
@@ -13,6 +13,7 @@
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px; }
   .hptl-phase1-add-rad-tamplate-form .Paper {
+    background: #fff;
     padding: 10px;
     border: 1px solid #d3d3d3;
     margin-top: 10px; }
