--- a/client/src/Components/OPBillCancellation/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
+++ b/client/src/Components/OPBillCancellation/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
@@ -23,6 +23,7 @@
   margin-top: -10px; }
 
 .hptl-phase1-op-add-billing-form .Paper {
+  background: #fff;
   min-height: 35vh;
   border: 1px solid #d3d3d3; }
 
