--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
@@ -31,7 +31,7 @@
     margin-top: -10px;
   }
 
-  .Paper {
+  .Paper {background:#fff; 
     min-height: 35vh;
     border: 1px solid #d3d3d3;
   }
