--- a/client/src/Components/Pharmacy/RequisitionEntry/RequisitionItems/RequisitionItems.css
+++ b/client/src/Components/Pharmacy/RequisitionEntry/RequisitionItems/RequisitionItems.css
@@ -19,6 +19,7 @@
     margin-bottom: -15px;
     margin-top: -10px; }
   .hptl-phase1-op-add-billing-form .Paper {
+    background: #fff;
     min-height: 35vh;
     border: 1px solid #d3d3d3; }
   .hptl-phase1-op-add-billing-form th,
