--- a/client/src/Components/RegistrationPatient/Billing/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/AddBillingForm.css
@@ -1,6 +1,7 @@
 .hptl-phase1-fd-billing-form {
   padding-top: 10px; }
   .hptl-phase1-fd-billing-form .Paper {
+    background: #fff;
     background: #ffff;
     border: 1px solid #d3d3d3;
     border: 1px solid #acaaaa;
