--- a/client/src/Components/RegistrationPatientAr/Billing/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatientAr/Billing/AddBillingForm.scss
@@ -62,6 +62,7 @@
   //   }
   // }
   .Paper {
+    background: #fff;
     background: #ffff;
     border: 1px solid #d3d3d3;
     border: 1px solid rgb(172, 170, 170);
