--- a/client/src/Components/RegistrationPatientAr/registration.scss
+++ b/client/src/Components/RegistrationPatientAr/registration.scss
@@ -83,7 +83,8 @@
     margin-right: "5px";
   }
 
-  .paper {
+  .Paper {
+    background: #fff;
     background-color: #292929 !important;
     left: 0px;
     width: 250px;
