--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.css
@@ -1,7 +1,7 @@
 .hptl-phase1-add-employee-form h5 {
   margin: 10px 0;
   padding-bottom: 2px;
-  border-bottom: 1px solid #d3d3d3; }
+  border-bottom: 1px dashed #d3d3d3; }
   .hptl-phase1-add-employee-form h5 span {
     border-bottom: 2px solid #8c8c8c;
     font-size: 0.8rem;
