--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.scss
@@ -2,7 +2,7 @@
   h5 {
     margin: 10px 0;
     padding-bottom: 2px;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px dashed #d3d3d3;
     span {
       border-bottom: 2px solid #8c8c8c;
       font-size: 0.8rem;
