--- a/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.css
+++ b/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.css
@@ -1,7 +1,6 @@
 .screen_assignment {
   /* reset our lists to remove bullet points and padding */
   /* make ALL links (main and submenu) have padding and background color */
-  /* add hover behaviour */
   /* when hovering over a .mainmenu item,
       display the submenu inside it.
       we're changing the submenu's max-height from 0 to 200px;
@@ -10,7 +9,6 @@
       we now overwrite the background-color for .submenu links only.
       CSS reads down the page, so code at the bottom will overwrite the code at the top.
     */
-  /* hover behaviour for links inside .submenu */
   /* this is the initial state of all submenus.
       we set it to max-height: 0, and hide the overflowed content.
     */ }
@@ -19,21 +17,22 @@
     list-style: none;
     padding: 0;
     margin: 0; }
-  .screen_assignment .mainmenu a {
+  .screen_assignment .mainmenu li {
     display: block;
     background-color: #ccc;
     text-decoration: none;
-    padding: 10px;
-    color: #000; }
-  .screen_assignment .mainmenu a:hover {
-    background-color: #c5c5c5; }
+    padding: 0;
+    color: #000;
+    /* add hover behaviour */ }
+    .screen_assignment .mainmenu li:hover {
+      background-color: #c5c5c5; }
   .screen_assignment .mainmenu li:hover .submenu {
     display: block;
     max-height: 200px; }
-  .screen_assignment .submenu a {
+  .screen_assignment .submenu li {
     background-color: #999; }
-  .screen_assignment .submenu a:hover {
-    background-color: #666; }
+    .screen_assignment .submenu li:hover {
+      background-color: #666; }
   .screen_assignment .submenu {
     overflow: hidden;
     -webkit-transition: all 0.5s ease-out; }
