--- a/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.scss
+++ b/client/src/Components/AdministrationSetup/ScreenAssignment/screen_assignment.scss
@@ -8,17 +8,17 @@
   }
 
   /* make ALL links (main and submenu) have padding and background color */
-  .mainmenu a {
+  .mainmenu li {
     display: block;
     background-color: #ccc;
     text-decoration: none;
-    padding: 10px;
+    padding: 0;
     color: #000;
-  }
 
-  /* add hover behaviour */
-  .mainmenu a:hover {
-    background-color: #c5c5c5;
+    /* add hover behaviour */
+    &:hover {
+      background-color: #c5c5c5;
+    }
   }
 
   /* when hovering over a .mainmenu item,
@@ -36,13 +36,11 @@
       CSS reads down the page, so code at the bottom will overwrite the code at the top.
     */
 
-  .submenu a {
+  .submenu li {
     background-color: #999;
-  }
-
-  /* hover behaviour for links inside .submenu */
-  .submenu a:hover {
-    background-color: #666;
+    &:hover {
+      background-color: #666;
+    }
   }
 
   /* this is the initial state of all submenus.
