--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/EmployeeMaster.css
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/EmployeeMaster.css
@@ -1,10 +1,7 @@
 .hims_employee_master .employee-section {
-  border: 1px solid #d3d3d3;
+  border-top: 1px solid #d3d3d3;
   margin: 10px;
-  margin-top: 0px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px; }
+  margin-top: 0px; }
 
 .hims_employee_master .toggle-section {
   margin: 10px;
