--- a/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.scss
@@ -1,2 +1,18 @@
-.att_rglzn {
+.hptl-SelfService-form {
+  h5 {
+    margin: 0 0 10px;
+    padding-bottom: 2px;
+    border-bottom: 1px dashed #d3d3d3;
+    span {
+      border-bottom: 2px solid #8c8c8c;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      line-height: 0;
+    }
+  }
+  #SelfService_Cntr {
+    .ReactTable {
+      max-height: 30vh !important;
+    }
+  }
 }
