--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.css
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.css
@@ -1,6 +1,6 @@
 .EmployeeProfile .EmployeeInfo-Top {
   background: white;
-  height: 70px;
+  height: 110px;
   padding: 5px 0 0;
   width: 100%;
   position: fixed;
@@ -24,35 +24,44 @@
     border-radius: 4px;
     border: 1px solid #e1e1e1; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeImg img {
-      height: 55px;
+      height: 95px;
       border-radius: 4px;
       overflow: hidden; }
   .EmployeeProfile .EmployeeInfo-Top .EmployeeName {
-    max-width: 230px;
+    max-width: 30%;
     margin-top: 2px;
     border-left: 1px solid #e1e1e1;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 57px; }
+    min-height: 98px; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeName h6 {
-      font-size: 1rem;
+      font-size: 1.2rem;
       margin-bottom: 2px;
       color: #000;
-      line-height: 1.2rem; }
+      line-height: 1.6rem;
+      min-height: 50px; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeName p {
       font-size: 0.8rem;
       margin: 0;
       padding: 0; }
+      .EmployeeProfile .EmployeeInfo-Top .EmployeeName p b {
+        color: #34b8bc;
+        font-weight: 300;
+        font-size: 1.2rem; }
   .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic {
     font-size: 0.8rem;
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 57px; }
+    min-height: 98px; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic span {
-      display: block; }
+      display: block;
+      line-height: 1.5rem; }
+      .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic span i {
+        text-align: center;
+        width: 20px; }
       .EmployeeProfile .EmployeeInfo-Top .EmployeeDemographic span b {
         color: #34b8bc; }
   .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail {
@@ -61,7 +70,7 @@
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 57px; }
+    min-height: 98px; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail span {
       display: block; }
       .EmployeeProfile .EmployeeInfo-Top .EmployeeHospitalDetail span b {
@@ -72,7 +81,7 @@
     line-height: 1.3rem;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 57px; }
+    min-height: 98px; }
     .EmployeeProfile .EmployeeInfo-Top .EmployeeVital span {
       display: inline-block;
       margin-right: 8px; }
@@ -100,7 +109,7 @@
   font-size: 1rem;
   text-transform: uppercase;
   position: fixed;
-  top: 123px;
+  top: 163px;
   z-index: 99; }
   .EmployeeTopNav .tabMaster {
     box-shadow: none; }
@@ -201,5 +210,6 @@
   width: 100%; }
 
 .hr-setion {
-  margin-top: 120px;
-  padding-top: 0; }
+  margin-top: 160px;
+  padding-top: 0;
+  background: none; }
