--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
@@ -1,7 +1,7 @@
 .EmployeeProfile {
   .EmployeeInfo-Top {
     background: white;
-    height: 70px;
+    height: 110px;
     padding: 5px 0 0;
     width: 100%;
     position: fixed;
@@ -32,29 +32,35 @@
       border-radius: 4px;
       border: 1px solid #e1e1e1;
       img {
-        height: 55px;
+        height: 95px;
         border-radius: 4px;
         overflow: hidden;
       }
     }
     .EmployeeName {
-      max-width: 230px;
+      max-width: 30%;
       margin-top: 2px;
       border-left: 1px solid #e1e1e1;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
-      min-height: 57px;
+      min-height: 98px;
       h6 {
-        font-size: 1rem;
+        font-size: 1.2rem;
         margin-bottom: 2px;
         color: #000;
-        line-height: 1.2rem;
+        line-height: 1.6rem;
+        min-height: 50px;
       }
       p {
         font-size: 0.8rem;
         margin: 0;
         padding: 0;
+        b {
+          color: #34b8bc;
+          font-weight: 300;
+          font-size: 1.2rem;
+        }
       }
     }
     .EmployeeDemographic {
@@ -63,9 +69,14 @@
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
-      min-height: 57px;
+      min-height: 98px;
       span {
         display: block;
+        line-height: 1.5rem;
+        i {
+          text-align: center;
+          width: 20px;
+        }
         b {
           color: #34b8bc;
         }
@@ -77,7 +88,7 @@
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
       padding-right: 10px;
-      min-height: 57px;
+      min-height: 98px;
       span {
         display: block;
         b {
@@ -91,7 +102,7 @@
       line-height: 1.3rem;
       padding-left: 10px;
       padding-right: 10px;
-      min-height: 57px;
+      min-height: 98px;
       span {
         display: inline-block;
         margin-right: 8px;
@@ -127,7 +138,7 @@
   font-size: 1rem;
   text-transform: uppercase;
   position: fixed;
-  top: 123px;
+  top: 163px;
   z-index: 99;
   .tabMaster {
     box-shadow: none;
@@ -247,6 +258,7 @@
   width: 100%;
 }
 .hr-setion {
-  margin-top: 120px;
+  margin-top: 160px;
   padding-top: 0;
+  background: none;
 }
